# motorcycle_knowlege_api

./: .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml  setup.cfg
app/core/: config.py  db.py
