[tool.poetry]
name = "motorcycle-knowlege-api"
version = "0.1.0"
description = ""
authors = ["Ivan <95343915+Ninefiveblade@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
strawberry-sqlalchemy-mapper = "0.4.3"
pre-commit = "^3.7.1"
pydantic = "^2.8.2"
redis = "^5.0.7"
orjson = "^3.10.6"
fastapi-versioning = "^0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
yamllint = "^1.35.1"
mixer = "^7.2.2"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
